Explicitly name all return types
