# typescript/src/models/LoginResponse.ts
@@ -1,0 +1,66 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Hathora Cloud API
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 0.0.1
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { exists, mapValues } from '../runtime';
+/**
+ * 
+ * @export
+ * @interface LoginResponse
+ */
+export interface LoginResponse {
+    /**
+     * 
+     * @type {string}
+     * @memberof LoginResponse
+     */
+    token: string;
+}
+
+/**
+ * Check if a given object implements the LoginResponse interface.
+ */
+export function instanceOfLoginResponse(value: object): boolean {
+    let isInstance = true;
+    isInstance = isInstance && "token" in value;
+
+    return isInstance;
+}
+
+export function LoginResponseFromJSON(json: any): LoginResponse {
+    return LoginResponseFromJSONTyped(json, false);
+}
+
+export function LoginResponseFromJSONTyped(json: any, ignoreDiscriminator: boolean): LoginResponse {
+    if ((json === undefined) || (json === null)) {
+        return json;
+    }
+    return {
+        
+        'token': json['token'],
+    };
+}
+
+export function LoginResponseToJSON(value?: LoginResponse | null): any {
+    if (value === undefined) {
+        return undefined;
+    }
+    if (value === null) {
+        return null;
+    }
+    return {
+        
+        'token': value.token,
+    };
+}
+
