# typescript/src/models/index.ts
@@ -14,7 +14,7 @@ export * from './ConnectionInfoV2';
 export * from './ContainerPort';
 export * from './CreateLobbyRequest';
 export * from './CreatePrivateLobbyRequest';
-export * from './CreateRoomDeprecatedRequest';
+export * from './CreateRoomRequest';
 export * from './Deployment';
 export * from './DeploymentConfig';
 export * from './DeploymentConfigEnvInner';
@@ -22,9 +22,9 @@ export * from './DeploymentEnvInner';
 export * from './DiscoveryResponseInner';
 export * from './ExposedPort';
 export * from './Lobby';
-export * from './LoginAnonymous200Response';
 export * from './LoginGoogleRequest';
 export * from './LoginNicknameRequest';
+export * from './LoginResponse';
 export * from './MetricName';
 export * from './MetricValue';
 export * from './PickRoomExcludeKeyofRoomAllocations';
